--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -222,4 +222,7 @@
         background-color: #b6c0b8;
         flex-wrap: wrap;
     }
+    .footer-social-links {
+        display: none;
+    }
 }
