--- a/src/view/Login/login.css
+++ b/src/view/Login/login.css
@@ -141,13 +141,17 @@
     text-decoration: underline;
     color:rgb(52, 113, 83);
     }
-    /*media-queries*/
-	@media screen and (max-width: 600px) {
+   /*media-queries*/ 
+	@media screen and (max-width: 450px) {
 		.login-header {
       width: 240px;
      
     }
-    
+    .login-user-img{
+      width: 50px;
+      height: 50px;
+      margin-bottom: 10px;
+    }
 		
 		.login-form-container{
 			width: 300px;
@@ -156,6 +160,9 @@
 			box-shadow: 2px 2px 10px rgba(38, 65, 52, 1);
    
 		}
+    .login-welcome-section h2{
+   display: none;
+    }
 		.login-welcome-section{
 			width:70%;
 			border-radius:0px 0px 0px 0px;
@@ -167,16 +174,23 @@
 			margin-right: 50%;
      top: 5px;
      margin-bottom:0%;
+     width: 50px;
+     height: 50px;
      
 		  }
+
 		  .login-form-container .welcome-section-1 h2 {
 			margin-right:60%;
       margin-top:5x;
 		  }
 		  
-		  .login-form-container .welcome-section-1 p {
-			margin-right: 25%;
-		  }
+	.login-welcome-section h2{
+    font-size: 10px;
+  }
+  .login-welcome-section p{
+    font-size: 0px;
+    display: none;
+  }
 		  
       .login-form-section .login-form-box input{
         width: 285px;
@@ -199,7 +213,7 @@ font-size: 10px;
       
 	}
 
-	@media screen and (min-width: 600px) and (max-width: 768px) {
+	@media screen and (min-width: 450px) and (max-width: 768px) {
 		.login-header {
       width:360px;
      
