--- a/src/view/Login/login.css
+++ b/src/view/Login/login.css
@@ -1,3 +1,22 @@
+.login-home-icon{
+  position:absolute;
+padding:10px;
+	background-color: #fff;
+	box-shadow:4px 4px 10px rgba(38, 65, 52, 1);
+	border-radius: 50%;
+	margin:0 20px;
+	top: 30px;
+	margin-bottom: 1500px;
+	display: flex;
+	
+
+}
+.login-home-icon .Home-icon{
+	height:40px;
+	width:40px;
+}
+
+
 
 .login-header {
     width: 840px;
@@ -142,7 +161,7 @@
     color:rgb(52, 113, 83);
     }
     /*media-queries*/
-	@media screen and (max-width: 600px) {
+    @media screen and (min-width:336.5px)and (max-width:450px)  {
 		.login-header {
       width: 240px;
      
@@ -196,10 +215,15 @@ font-size: 10px;
 		  .login-nav-link {
 			font-size: 13px;
 		  }
+      .login-home-icon{
+        margin:0 20px;
+        top: 30px;
+        margin-bottom: 50px
+        }
       
 	}
 
-	@media screen and (min-width: 600px) and (max-width: 768px) {
+	@media screen and (min-width:450.5px)and (max-width:650px) {
 		.login-header {
       width:360px;
      
@@ -254,10 +278,15 @@ font-size: 10px;
 		  .login-nav-link {
 			font-size: 18px;
 		  }
+      .login-home-icon{
+        margin:0 20px;
+        top: 20px;
+        margin-bottom:100px;
+        }		
       
 	}
 
-	@media screen and (min-width: 769px) and (max-width: 992px) {
+	@media screen and (min-width:650.5px)and (max-width:1150px) {
     .login-header {
       width:680px;
      
@@ -265,11 +294,16 @@ font-size: 10px;
     .login-form-container{
       width:740px;
     }
+    .login-home-icon{
+			margin:0 20px;
+			top: 20px;
+			margin-bottom:100px;
+		  }	
 		
 	}
 
 
-	@media screen and (min-width: 993px) and (max-width: 1200px) {
+	@media screen and (min-width: 1150px) and (max-width: 1200px) {
     .login-header {
       width:800px;
      
