--- a/src/view/About-us/about.css
+++ b/src/view/About-us/about.css
@@ -55,7 +55,7 @@
   max-width: 360px;
   padding: 0;
   border-radius: 20px;
-  box-shadow: 2px 2px  8px #2e7031;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   cursor: pointer; 
   background-color: #fff;
 }
