--- a/src/view/Blog/Blog.css
+++ b/src/view/Blog/Blog.css
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    /* margin-top: 100px; */
+    margin-top: 100px; 
 }
 .blog-card {
     width: 360px;
